sticky mobile menu, correction padding for jumping page bug

--- a/themes/profumo-labo/_dev/css/theme/layout/_header.scss
+++ b/themes/profumo-labo/_dev/css/theme/layout/_header.scss
@@ -7,6 +7,13 @@
   z-index: 500;
 }
 
+.correction-padding {
+  padding-top: 61px;
+  @include media-breakpoint-down(md) {
+    padding-top: 74.58px;
+  }
+}
+
 .header-top {
   padding: map-get($spacers, 2) 0;
   @include media-breakpoint-up(md) {
@@ -1138,6 +1145,7 @@
         margin-top: -4px;
         height: 24px;
         padding: 0;
+        margin-right: 5px;
 
         &:focus{
           background: $white;
@@ -1179,7 +1187,12 @@
     }
 
     &--sticky{
-      position: relative;
+      position: fixed;
+      top: 0;
+      left: 0;
+      right: 0;
+      z-index: 800;
+      padding: 0;
     }
   }
 
